# Thanos

./: README.md  USAGE_EXAMPLES.md  pyproject.toml  quick_examples.py  regex_search_demo.py  usage_examples.py
src/thanos/: ai.txt  ai_cli.txt  cache.py  find.txt  helpers.py  out.txt  stage.py  test_plan.py  test_runner.py  workflow.py
src/thanos/app/backend/bapp_one/: test_suite_one.py
src/thanos/app/frontend/app_one/: test_suite_one.py
src/thanos/cli/: __init__.py  runner.py
src/thanos/discovery/: __init__.py  discoverers.py  discovery.py  filters.py  interfaces.py  output.txt  parsers.py
src/thanos/engine/eu/app_one/: test_suite_one.py
src/thanos/engine/eu/app_two/: test_suite_one.py
src/thanos/engine/ny/bapp_one/: test_suite_two.py
src/thanos/engine/ny/bapp_two/: test_suite_one.py  test_suite_two.py
src/thanos/stages/: cleanup.py  login.py  user.py
src/thanos/testing/: base_test_suite.py  stage_factory.py  test_builder.py
src/thanos/tests/: test_suite_basic.py  test_suite_performance.py
